# rosetta-io

./: .envrc  .gitignore  Dockerfile  README.md  locking.py  markdowns.py  pyproject.toml  requirements.txt  test_example.py  test_helpers.py  test_suite.py
bash/: Dockerfile  encode.sh  json_control_chars.sh  json_null_char.sh  json_numbers.sh  json_numbers.sh.md  json_outputting_data.sh  null_char.sh  read_file.sh  streaming_stdin.sh  write_to_named_pipe.sh
bash3/: Dockerfile  arguments.sh  decode.sh  encode.sh  json_array.sh  json_object_array.sh  json_object_with_array_values.sh  json_stdout_object.sh  null_char.sh  read_file.sh  read_json_file.sh  stdin.sh  streaming_pipe_in.sh  streaming_pipe_in_and_out.sh  streaming_stdin.sh  write_file.sh
bash5/: Dockerfile  arguments.sh  decode.sh  encode.sh  json_array.sh  json_numbers.sh  json_object_array.sh  json_object_with_array_values.sh  json_outputting_data.sh  json_stdout_object.sh  read_file.sh  read_json_file.sh  stdin.sh  streaming_pipe_in.sh  streaming_pipe_in_and_out.sh  streaming_stdin.sh  write_file.sh  write_to_named_pipe.sh  write_to_text_file.sh
csharp/: Arguments.cs  Decode.cs  Dockerfile  Encode.cs  JsonArray.cs  JsonControlChars.cs  JsonNullChar.cs  JsonNumbers.cs  JsonObjectArray.cs  JsonObjectWithArrayValues.cs  JsonOutputtingData.cs  JsonStdoutObject.cs  NullChar.cs  Program.cs  ReadFile.cs  ReadJsonFile.cs  Stdin.cs  StreamingPipeIn.cs  StreamingPipeInAndOut.cs  StreamingStdin.cs  WriteFile.cs  WriteToNamedPipe.cs  WriteToTextFile.cs  arguments.csx  rosetta-io.csproj
deno/: Dockerfile  arguments.mjs  decode.mjs  encode.mjs  json_array.mjs  json_control_chars.mjs  json_numbers.mjs  json_object_array.mjs  json_object_with_array_values.mjs  json_stdout_object.mjs  null_char.mjs  read_file.mjs  read_json_file.mjs  stdin.mjs  streaming_pipe_in.mjs  streaming_pipe_in_and_out.mjs  streaming_stdin.mjs  (+3 more)
rust/: Cargo.toml  Dockerfile  README.md  _main.rs  arguments.rs  decode.rs  encode.rs  json_array.rs  json_control_chars.rs  json_null_char.rs  json_numbers.rs  json_object_array.rs  json_object_with_array_values.rs  json_outputting_data.rs  json_stdout_object.rs  null_char.rs  output.txt  read_file.rs  read_json_file.rs  stdin.rs  streaming_pipe_in.rs  streaming_pipe_in_and_out.rs  streaming_stdin.rs  write_file.rs  write_to_named_pipe.rs  write_to_text_file.rs
(+433 files in other folders)
